improvement(upload_status.html): remove columns from details
 Full details are provided in the dedicated div

--- a/emex_upload/templates/emex_upload/upload_status.html
+++ b/emex_upload/templates/emex_upload/upload_status.html
@@ -232,7 +232,7 @@
         let errorDetailsText = null;
         if (details) {
             if (details.missing_columns) {
-                errorDetailsText = `Отсутствуют колонки: ${details.missing_columns.join(', ')}`;
+                errorDetailsText = `Отсутствуют ожидаемые заголовки колонок.`;
             } else if (details.file_read_error) {
                 errorDetailsText = details.file_read_error[0];
             }
