fix(cadence_explanation_drawer): remove inset-0
inset-0 got on top of the rest of the content, making it impossible to click anything on the page.
Now fixed.

--- a/pricelens/templates/pricelens/partials/cadence_explanation_drawer.html
+++ b/pricelens/templates/pricelens/partials/cadence_explanation_drawer.html
@@ -1,4 +1,4 @@
-<div class="drawer drawer-end fixed inset-0 z-50">
+<div class="drawer drawer-end fixed z-50">
     <input id="cadence-explanation-drawer" type="checkbox" class="drawer-toggle"/>
     <div class="drawer-content">
     </div>
