chore(emex_upload.html): remove "Test db" from frontend

--- a/emex_upload/templates/emex_upload/emex_upload.html
+++ b/emex_upload/templates/emex_upload/emex_upload.html
@@ -31,7 +31,7 @@
     {% endif %}
 
     <div class="card-body items-center text-center p-0">
-        <h2 class="card-title text-2xl font-bold mb-4">Загрузка данных Emex (тестовая база)</h2>
+        <h2 class="card-title text-2xl font-bold mb-4">Загрузка данных Emex</h2>
         <p class="mb-6 text-base-content/60">Выберите txt-файл для загрузки и обработки (макс. размер 1GB).</p>
 
         <form action="{% url 'emex_upload:upload' %}" method="post" enctype="multipart/form-data" class="w-full max-w-md" id="upload-form">
